<resources>
    <string name="app_name">practica01</string>
    <string name="textFieldNombre">Nombre</string>
    <string name="textFieldApellido">Apellido</string>
    <string name="textFieldContraseña">Contraseña</string>
    <string name="textFieldRepContraseña">Repetir Contraseña</string>
    <string name="textFieldEmail">Email</string>
    <string name="radioGroupTarjetas">Tipo de tarjeta:</string>
    <string name="comboGroupFechaDeVencimiento">Fecha de vencimiento</string>
    <string name="textFieldCBU">CBU</string>
    <string name="textFieldAliasCBU">Alias CBU</string>
    <string name="textFieldCC">Numero de tarjeta</string>
    <string name="textFieldCCv">CCV</string>
    <string name="switchCarga">Realizar carga inicial?</string>
    <string name="terminos">Acepto los terminos y condiciones</string>
    <string name="registrarButtonText">Registrar</string>
    <string name="radioDebito">Debito</string>
    <string name="radioCredito">Credito</string>
    <string name="radioGroupTitle">Tipo de tarjeta</string>
    <string name="cargaInicial">Carga inicial</string>
    <string name="bienvenido">Bienvenido/a</string>
    <string name="descripcionPlato">Descripción</string>
    <string name="precioPlato">Precio</string>
    <string name="caloriasPlato">Calorias</string>
    <string name="tituloPlato">Titulo</string>
    <string name="nuevoPlato">Nuevo plato</string>
    <string name="guardarPlato">Guardar</string>

    <string name="pedirCV">Pedir</string>
    <string name="registrarToolbar">Registrar Cliente</string>
    <string name="crearPlatoToolbar">Crear nuevo plato</string>
    <string name="listarPlatosToolbar">Ver lista de Platos</string>
    <string name="precioTotal">Total: </string>
    <string name="nuevo_pedido">Nuevo Pedido</string>
    <string name="ingrese_su_email">Ingrese su Email</string>
    <string name="direccion">Direccion</string>
    <string name="numero">Numero</string>
    <string name="tipo_de_pedido">Tipo de pedido:</string>
    <string name="envio_a_domicilio">Envio a Domicilio</string>
    <string name="take_away">Take Away</string>
    <string name="agregar_plato">Agregar Plato</string>
    <string name="confirmar_pedido">Confirmar Pedido</string>
    <string name="_1000">$1000</string>
    <string name="detalles">Detalles</string>
    <string name="usar_db_local_api_rest">Usar DB Local / Api Rest</string>

    <string name="google_maps_key">AIzaSyCeMgRvGQ3htz21Rw_idslnD0r_yKCodqY</string>



</resources>
