<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/registrar"
<<<<<<< HEAD
<<<<<<< HEAD
        android:icon="@drawable/ic_baseline_person_add_24"
        android:title="@string/registrarToolbar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/crearItem"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/crearPlatoToolbar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/listarItems"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/listarPlatosToolbar"
        app:showAsAction="ifRoom" />
=======
=======
>>>>>>> develop
        android:icon="@android:drawable/ic_input_add"
        android:title="registrar"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/crearItem"
        android:title="crearItem" />
    <item
        android:id="@+id/listarItems"
        android:title="listarItems" />
<<<<<<< HEAD
>>>>>>> develop
=======
>>>>>>> develop
</menu>